# cli-todo

./: .gitignore  README.md  pyproject.toml  run.sh
cli_todo/: cli.py
tests/: test_cli_todo.py
